--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,9 +2,18 @@
 <resources>
 
     <string name="app_name">iPerf3Ericsson</string>
-    <string name="hello_world">This is Spar...Hello world!!</string>
+    <string name="hello_world">This is Spar!Hello world!!</string>
     <string name="action_settings">Settings</string>
-    <string name="Run_iPerf_English">Run Test!</string>
-    <string name="Draw_Graph">Draw</string>
+    <string name="run_iperf_button">Run</string>
+    <string name="grape_type_prompt">Choose a graph</string>
+    
+    <string-array name="graph_type_arrays">
+        <item>Bar_Chart</item>
+        <item>Line_Chart</item>
+        <item>Cubic_Line_Chart</item>
+        <item>Area_Chart</item>
+        <item>Time_Chart</item>
+        <item>Dial_Chart</item>
+    </string-array>
 
 </resources>
